# EMP

./: .gitignore  .gitmodules  LICENSE  README.md
00_Guide/: FontType.txt  InstallGuide.md  README.md  packProtocoll.md
01_DOC/: EMP.vpp  EMP.vpp.bak_000f  EMP.vpp.bak_001d  EMP.vpp.bak_002d  EMP.vpp.bak_003d  EMP.vpp.bak_004d  EMP.vpp.bak_005d  EMP.vpp.bak_006d  EMP.vpp.bak_007d  EMP.vpp.bak_008d  EMP.vpp.bak_009d  EMP.vpp.bak_010d  EMP.vpp.bak_011d  EMP.vpp.bak_012d  EMP.vpp.bak_013d  EMP.vpp.bak_014d  EMP.vpp.bak_015d  EMP.vpp.bak_016d  EMP.vpp.bak_017d  EMP.vpp.bak_018d  EMP.vpp.bak_019d  EMP.vpp.bak_020d  EMP.vpp.bak_021d  EMP.vpp.bak_022d  EMP.vpp.bak_023d  EMP.vpp.bak_024d  EMP.vpp.bak_025d  EMP.vpp.bak_026d  EMP.vpp.bak_027d  EMP.vpp.bak_028d
02_SRC/: CMakeLists.txt  dependance.sh  main.cpp
02_SRC/Common-src/: CMakeLists.txt  README.md
02_SRC/Common-src/circularBuffer/: CMakeLists.txt  CircularBuffer.h
02_SRC/Common-src/dataTransfertPrimitive/: CMakeLists.txt  DataFactory.cpp  DataFactory.h  dataPrimitive.h  dataTransfert_AllInclude.h
02_SRC/Common-src/dataTransfertPrimitive/dataManipolation/: AllSensor.cpp  AllSensor.h  CurrentMot.cpp  CurrentMot.h  EncoderMot.cpp  EncoderMot.h  SettingBoard_C.cpp  SettingBoard_C.h  SpeedMot.cpp  SpeedMot.h  typePackWrongExcept.h
02_SRC/Common-src/timeOp/: CMakeLists.txt  timeSpecOp.h
02_SRC/Common-src/uartDriver/: CMakeLists.txt  UartDriver.h
02_SRC/Common-src/uartDriver/pcListen_demo/: .gitignore  CMakeLists.txt
02_SRC/EMPlibs/: CMakeLists.txt  EMP_Include.h  MP.cpp  MP.h  MPSTSerial.cpp  MPSTSerial.h  MP_Fd.cpp  MP_Fd.h  MP_Pipe.cpp  MP_Pipe.h  MP_ST_usb.cpp  MP_ST_usb.h  MP_Serial.cpp  MP_Serial.h  MP_Uart.cpp  MP_Uart.h  README.md  UARTdataTransfert.cpp  UARTdataTransfert.h  UartDriver.cpp  UartDriver.h  UartException.h  cmakeEmpty.cpp  conf.h  exeptionMPLinux.h  includePlatform.h  library.properties  macro.h
02_SRC/EMPlibs/MPcore/: CMakeLists.txt  MP.cpp  MP.h  conf.h  macro.h
02_SRC/EMPlibs/MPcore/circularBuffer/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  modularOperation.h  opDef.h
02_SRC/EMPlibs/MPcore/cobs-c/: cobs.c  cobs.h
02_SRC/EMPlibs/MPcore/crc8/: crc8.cpp  crc8.h
02_SRC/EMPlibs/circularBuffer/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h
02_SRC/EMPlibs/crc8/: crc8.cpp  crc8.h
02_SRC/EMPlibs/src/: MP_Fd.cpp  MP_Fd.h  MP_ST_usb.cpp  MP_ST_usb.h  MP_Serial.cpp  MP_Serial.h  MP_Uart.cpp  MP_Uart.h  README.md
02_SRC/EMPlibs/src/MPcore/: CMakeLists.txt  MP.cpp  MP.h  conf.h  macro.h
02_SRC/EMPlibs/src/MPcore/circularBuffer/: CMakeLists.txt  CircularBuffer.h
02_SRC/EMPlibs/src/MPcore/cobs-c/: cobs.cpp
02_SRC/EMPlibs/src/MPcore/crc8/: crc8.cpp  crc8_inc.h
02_SRC/EMPlibs/src/timeOp/: timeSpecOp.h
02_SRC/EMPlibs/timeOp/: CMakeLists.txt  timeSpecOp.h  timerSpecOp.cpp
02_SRC/crc8/: crc8.cpp  crc8_inc.h
02_SRC/pcListen_demo/: README.md  main.cpp
03_Test/: README.md
03_Test/CallBackTest/pipeTestCallback/: CMakeLists.txt  main.cpp
03_Test/CallBackTest/uartTestCallBack/ArduinoPlatformIo/: CMakeLists.txt
03_Test/CallBackTest/uartTestCallBack/ArduinoPlatformIo/include/: pack.h
03_Test/CallBackTest/uartTestCallBack/ArduinoPlatformIo/lib/: EMPlibs
03_Test/CallBackTest/uartTestCallBack/LinuxSide/: CMakeLists.txt  main.cpp
03_Test/CallBackTest/uartTestCallBack/STM32_USB-calback/: .cproject  .mxproject  .project  EMPlibs
03_Test/CallBackTest/uartTestCallBack/STM32_USB-calback/Core/Src/: main.cpp
03_Test/CallBackTest/uartTestCallBack/STM32_USB-calback/Debug/: STM_EMP_usb-callback.elf  STM_EMP_usb-callback.list  STM_EMP_usb-callback.map
03_Test/CallBackTest/uartTestCallBack/STM32_USB-calback/Release/: STM_EMP_usb-callback.elf  STM_EMP_usb-callback.list  STM_EMP_usb-callback.map  makefile  sources.mk
03_Test/CallBackTest/uartTestCallBack/STM32_USB-callBack/: .cproject  .project  STM_EMP_usb.ioc
03_Test/CallBackTest/uartTestCallBack/STM32_USB-callBack/Core/Inc/: stm32f4xx_hal_conf.h
03_Test/CallBackTest/uartTestCallBack/STM32_USB-callBack/Core/Src/: stm32f4xx_hal_msp.c
03_Test/CallBackTest/uartTestCallBack/STM32_USB-callBack/Debug/: STM_EMP_usb.elf  STM_EMP_usb_callBack.elf  STM_EMP_usb_callBack.list  STM_EMP_usb_callBack.map  makefile  objects.list  sources.mk
03_Test/CallBackTest/uartTestCallBack/STM32_USB-callBack/Debug/EMPlibs/: MP_ST_usb.d  subdir.mk
03_Test/pipeTest/: CMakeLists.txt  EMPlibs  main.cpp
03_Test/uartTest/: pack.h
03_Test/uartTest/ArduinoPlatformIo/: .gitignore  CMakeListsPrivate.txt  platformio.ini
03_Test/uartTest/ArduinoPlatformIo/src/: .main.cpp.kate-swp  main.cpp
03_Test/uartTest/EMP-Arduino_example/: EMP-Arduino_example.ino  pack.h
03_Test/uartTest/LinuxSide/: CMakeLists.txt  main.cpp
03_Test/uartTest/STM32/: .cproject  .mxproject  STM_EMP_usb.ioc
03_Test/uartTest/STM32/Core/Src/: main.c
03_Test/uartTest/STM32/Debug/: STM_EMP_usb.elf  STM_EMP_usb.list  STM_EMP_usb.map  makefile  objects.list
03_Test/uartTest/STM32/Debug/Core/Src/: main.d  main.su  subdir.mk
03_Test/uartTest/STM32/Debug/Core/Startup/: subdir.mk
03_Test/uartTest/STM32/Debug/EMPlibs/: MPSTSerial.d  subdir.mk
03_Test/uartTest/STM32/Debug/EMPlibs/MPcore/: subdir.mk
03_Test/uartTest/STM32/Debug/EMPlibs/timeOp/: subdir.mk  timerSpecOp.d
03_Test/uartTest/STM32/Debug/USB_DEVICE/App/: subdir.mk  usbd_cdc_if.d  usbd_cdc_if.su
03_Test/uartTest/STM32/USB_DEVICE/App/: usbd_cdc_if.c
03_Test/uartTest/STM32_USB/: .cproject  .project  EMPlibs  STM_EMP_usb.launch
03_Test/uartTest/STM32_USB/Core/Src/: main.cpp
03_Test/uartTest/STM32_USB/Debug/: STM_EMP_usb.elf  STM_EMP_usb.list  STM_EMP_usb.map  STM_EMP_usb_callBack.elf  STM_EMP_usb_callBack.list  makefile  objects.list  sources.mk
03_Test/uartTest/STM32_USB/Debug/Core/Src/: main.d  main.su  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk
03_Test/uartTest/STM32_USB/Debug/EMPlibs/: MP_Fd.d  MP_Serial.d  MP_Uart.d  cmakeEmpty.d  subdir.mk
03_Test/uartTest/STM32_USB/Debug/EMPlibs/MPcore/: MP.d  subdir.mk
03_Test/uartTest/STM32_USB/Debug/EMPlibs/src/: MP_Uart.d
(+105 files in other folders)
